Fixes z-index of tag elements on hours page implements show and hide methods for hoursWindowView

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -212,7 +212,7 @@ textarea {
     margin-top: -250px;
     top: 55%;
     left: 50%;
-    z-index: 10;
+    z-index: 1000000;
     background-color: white;
     border-radius: 10px;
 }
